<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rafael.controlhome.controller.fragment.FragmentControlHome">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@android:color/holo_blue_dark"
        android:dividerHeight="30dp"
        android:orientation="vertical"
        android:padding="5dp">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/cardViewSala"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:paddingBottom="30dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:touchscreenBlocksFocus="true"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:id="@+id/linearLayoutSala"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="1dp"
                        android:layout_marginRight="1dp"
                        android:dividerHeight="15dp"
                        android:orientation="vertical"
                        android:padding="10dp"
                        android:paddingBottom="5dp"
                        android:paddingLeft="1dp"
                        android:paddingRight="5dp"
                        android:paddingTop="10dp">


                        <Switch
                            android:id="@+id/luzSala"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:layout_gravity="center"
                            android:text="@string/luz_sala"
                            android:textSize="20dp"
                            android:thumbTextPadding="@dimen/cardview_default_radius" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:textAlignment="center" />

                <android.support.v7.widget.CardView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/cardViewCozinha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:paddingBottom="30dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:id="@+id/linearLayoutCozinha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:dividerHeight="15dp"
                        android:orientation="vertical"
                        android:padding="10dp"
                        android:paddingBottom="5dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:paddingTop="10dp">

                        <Switch
                            android:id="@+id/luzCozinha"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/luz_cozinha"
                            android:textSize="20dp" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:textAlignment="center" />

                <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/cardViewQuarto1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:paddingBottom="30dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:id="@+id/linearLayoutQuarto1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:dividerHeight="15dp"
                        android:orientation="vertical"
                        android:padding="10dp"
                        android:paddingBottom="5dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:paddingTop="10dp">

                        <Switch
                            android:id="@+id/luzQuarto1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/luz_quarto1"
                            android:textSize="20dp" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:textAlignment="center" />

                <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/cardViewQuarto2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:paddingBottom="30dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:id="@+id/linearLayoutQuarto2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:dividerHeight="15dp"
                        android:orientation="vertical"
                        android:padding="10dp"
                        android:paddingBottom="5dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:paddingTop="10dp">

                        <Switch
                            android:id="@+id/luzQuarto2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/luz_quarto2"
                            android:textSize="20dp" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:textAlignment="center" />

                <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/cardViewBanheiro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:paddingBottom="30dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:id="@+id/linearLayoutBanheiro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:dividerHeight="15dp"
                        android:orientation="vertical"
                        android:padding="10dp"
                        android:paddingBottom="5dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:paddingTop="10dp">

                        <Switch
                            android:id="@+id/luzBanheiro"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/luz_banheiro"
                            android:textSize="20dp" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:textAlignment="center" />

                <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/cardViewGaragem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:paddingBottom="30dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:id="@+id/linearLayoutGaragem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:dividerHeight="15dp"
                        android:orientation="vertical"
                        android:padding="10dp"
                        android:paddingBottom="5dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:paddingTop="10dp">

                        <Switch
                            android:id="@+id/luzGaragem"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/luz_garagem"
                            android:textSize="20dp" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:textAlignment="center" />

                <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/cardViewJardim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:paddingBottom="30dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:id="@+id/linearLayoutJardim"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:dividerHeight="15dp"
                        android:orientation="horizontal"
                        android:padding="10dp"
                        android:paddingBottom="5dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:paddingTop="10dp">

                        <Button
                            android:id="@+id/luzJardi"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/luz_festa"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold"
                            android:textSize="20dp"
                            style="@android:style/Widget.Holo.Button.Borderless"/>


                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</RelativeLayout>